@@ -5,7 +5,6 @@ import (
 	"net/mail"
 
 	"github.com/gophish/gomail"
-	"github.com/gophish/gophish/config"
 	log "github.com/gophish/gophish/logger"
 	"github.com/gophish/gophish/mailer"
 )
@@ -119,12 +118,6 @@ func (s *EmailRequest) Generate(msg *gomail.Message) error {
 		return err
 	}
 	s.URL = url
-
-	// Add the transparency headers
-	msg.SetHeader("X-Mailer", config.ServerName)
-	if conf.ContactAddress != "" {
-		msg.SetHeader("X-Contact", conf.ContactAddress)
-	}
 
 	// Parse the customHeader templates
 	for _, header := range s.SMTP.Headers {
